@@ -1,3 +1,10 @@
+2007-12-01  Corinna Vinschen  <corinna@vinschen.de>
+	    Brian Dessent <brian@dessent.net>
+
+	* Makefile.in (OBSOLETE_FUNCTIONS): Add timezone.
+	* include/cygwin/time.h: Drop conditional timezone definitions.
+	(timezone): Declare as extern symbol referring _timezone variable.
+
 2007-11-27  Corinna Vinschen  <corinna@vinschen.de>
 
 	Drop old SetResourceLock stuff in favor of mutos.
